--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 body {
   margin: 50px;
 }
 
-#user {
+#users {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.user {
   padding: 10px;
-  justify-content: center;
+  text-align: center;
 }
 
 .img {
